# Parsomancer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  parse.cpp  parse.h  ponder.cpp
src/: mancy.cpp  mancy.h  orb.cpp  orb.h  parse.cpp  parse.h  ponder.cpp  ponder.h  spellbook.h
